--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
         <!-- logo section  -->
         <div class="col-2 pt-4 pb-3 ms-3 test">
-          <img src="/images/logo.jpg" class="img-fluid" alt="" />
+          <img src="../images/logo.jpg" class="img-fluid" alt="" />
         </div>
         
         <!-- heading part which contain name  -->
@@ -149,7 +149,7 @@
               <div class="col-3 ms-2"></div>
               <div class="col-5 logo2-blck pt-4">
                 <div id="swastic-logo-block">
-                  <img id="swastic-logo" src="/images/swastik.png" class="img-fluid" alt="Swastic image">
+                  <img id="swastic-logo" src="../images/swastik.png" class="img-fluid" alt="Swastic image">
               </div>
               </div>
             </div>
