--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     />
 
     <!-- my css  -->
-    <link rel="stylesheet" href="CSS/style.css" />
+    <link rel="stylesheet" href="../CSS/style.css" />
 
     <title>Kizen Soft Tech</title>
   </head>
