--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     />
 
     <!-- my css  -->
-    <link rel="stylesheet" href="../CSS/style.css" />
+    <link rel="stylesheet" href="CSS/style.css" />
 
     <title>Kizen Soft Tech</title>
   </head>
@@ -24,7 +24,7 @@
 
         <!-- logo section  -->
         <div class="col-2 pt-4 pb-3 ms-3 test">
-          <img src="../images/logo.jpg" class="img-fluid" alt="" />
+          <img src="../images/logo.jpg" class="img-fluid" alt="kizen logo" />
         </div>
         
         <!-- heading part which contain name  -->
