--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
         <!-- logo section  -->
         <div class="col-2 pt-4 pb-3 ms-3 test">
-          <img src="..images/logo.jpg" class="img-fluid" alt="kizen logo" />
+          <img src="images/logo.jpg" class="img-fluid" alt="kizen logo" />
         </div>
         
         <!-- heading part which contain name  -->
